Navmesh crashed if on creation navmesh is also selected #32294

Closed
opened 2012-08-09 18:03:36 +02:00 by Thomas Trocha · 5 comments

Category: Logic

%%%Hi there,

Not sure about the category(found logic most appropriate)

here a crash-bug (r49732) on linux64 (system-info attached):

  1. create a scene with a plane, and 3 cubes that intersect the plane
  2. switch to blender-game
  3. select the whole scene with A-key
  4. In scene-view: create mesh via "Build navigation mesh"-button
  5. again select the whole scene (including the navmesh) and build-again (if it doesn't crash, build again)
    %%%
**Category**: Logic %%%Hi there, Not sure about the category(found logic most appropriate) here a crash-bug (r49732) on linux64 (system-info attached): 1) create a scene with a plane, and 3 cubes that intersect the plane 2) switch to blender-game 3) select the whole scene with A-key 4) In scene-view: create mesh via "Build navigation mesh"-button 5) again select the whole scene (including the navmesh) and build-again (if it doesn't crash, build again) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Attached patch to fix this. Valgrind did a great job. I would highly appreciate if somebody could take a look at this.%%%

%%%Attached patch to fix this. Valgrind did a great job. I would highly appreciate if somebody could take a look at this.%%%
Member

%%%Assigning this to Campbell Barton to take a look at the patch (because it affects bmesh system, not navmesh).%%%

%%%Assigning this to Campbell Barton to take a look at the patch (because it affects bmesh system, not navmesh).%%%

%%%thanks!, fix applied 54682.%%%

%%%thanks!, fix applied 54682.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32294
No description provided.