fix [#32294] Navmesh crashed if on creation navmesh is also selected thanks to Sv. Lockal for investigating and providing the fix.